[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "nltk>=3.9.1",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "spacy-langdetect>=0.1.2",
    "spacy>=3.8.4",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.1",
    "trafilatura>=2.0.0",
    "transformers>=4.49.0",
    "google-search-results>=2.4.2",
    "langdetect>=1.0.7",
    "serpapi>=0.1.5",
]
